# ADAS

./: CMakeLists.txt  LICENSE  README.md  main.cpp
common/camera_model/: birdview_model.h  camera_model.h  utils.h
common/onnx_models/: python_api.cpp
common/uff_models/classification_net/: classification_net.cpp  classification_net.h
common/uff_models/common/: logger.cpp
common/uff_models/common/include/: object_class.h
common/uff_models/unet/: unet.cpp  unet.h
common/utils/: file_storage.cpp  timer.cpp  utility.cpp
common/utils/include/: camera.h  file_storage.h  filesystem_include.h  timer.h  utility.h
configs/: config.h  config_lane_detection.h
input_folder/: README.md  test_config.txt
lane_detection/: CMakeLists.txt  lane_detector.cpp  lane_detector.h  lane_line.h  test_lane_camera_reader.cpp  test_lane_detector.cpp  test_lane_identifier.cpp  test_lane_video_player.cpp
lane_detection_NN/: config.py  demo.py  losses.py  requirements.txt  train.py
lane_detection_NN/base/: __init__.py  functional.py  objects.py
models/: README.md  model_config.json
